initial check in

--- a/.weatheralert2mqtt.conf
+++ b/.weatheralert2mqtt.conf
@@ -20,7 +20,7 @@ MQTT_PORT: 1883
 # ..../version
 #
 
-CLIENT_TOPIC: "/clients/metar2mqtt/"
+CLIENT_TOPIC: "/clients/weatheralert2mqtt/"
 
 
 
@@ -30,10 +30,10 @@ CLIENT_TOPIC: "/clients/metar2mqtt/"
 # This is the base topic that all of the data is published to.
 # the remainder of the topics are created dynamically from the 
 # data below.
-# ..../[AIRPORT_ID]/xxxxx
+# ..../[STATE]/[COUNTY]/xxxxx
 
 
-BASE_TOPIC: "/raw/metar/"
+BASE_TOPIC: "/raw/weatheralert/"
 
 
 
@@ -44,19 +44,25 @@ BASE_TOPIC: "/raw/metar/"
 # An interval of zero will cause the client to run only onece and exit.
 #
 
-INTERVAL: 15
+INTERVAL: 60
 
 
 
 #
-# AIRPORT_IDS
+# COUNTIES
 #
-# This is a list of the airport id's to querry weather information for.
+# This is a list of the counties to querry for weather alerts.
 #
 
-AIRPORT_IDS:
+COUNTIES:
 [
-	kamw
-	kcul
+	{
+		state:	"il"
+		county:	"white"
+	}
+	{
+		state:	"ia"
+		county:	"story"
+	}
 ]
 
