moved config file to home dir & fixed config capitalization

--- a/.weatheralert2mqtt.conf
+++ b/.weatheralert2mqtt.conf
@@ -6,7 +6,7 @@
 # MQTT_PORT holds the port number to use for the mqtt broker
 #
 
-MQTT_HOST: "home"
+MQTT_HOST: "127.0.0.1"
 MQTT_PORT: 1883
 
 
@@ -57,12 +57,8 @@ INTERVAL: 60
 COUNTIES:
 [
 	{
-		state:	"il"
-		county:	"white"
-	}
-	{
-		state:	"ia"
-		county:	"story"
+		state:	"IL"
+		county:	"Cook"
 	}
 ]
 
