removed dead code and cleaned up config file

--- a/.weatheralert2mqtt.conf
+++ b/.weatheralert2mqtt.conf
@@ -6,7 +6,7 @@
 # MQTT_PORT holds the port number to use for the mqtt broker
 #
 
-MQTT_HOST: "127.0.0.1"
+MQTT_HOST: "mqtt"
 MQTT_PORT: 1883
 
 
@@ -62,3 +62,7 @@ COUNTIES:
 	}
 ]
 
+
+LOGFILE: "~/weatheralert2mqtt.log"
+
+LOGLEVEL: 10
